force-app/main/default/objects/ServiceLevelAgreement__c/ServiceLevelAgreement__c.object-meta.xml
<CustomObject>
    <description>Stores service level agreements for stages of our internal processes.</description>
    <label>SLA</label>
    <nameField>
        <displayFormat>SLA-{00000}</displayFormat>
        <label>SLA Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SLAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>