force-app/main/default/objects/ServiceLevelAgreement__c/fields/Advice__c.field-meta.xml
<CustomField>
    <fullName>Advice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Advice</label>
    <referenceTo>Advice__c</referenceTo>
    <relationshipLabel>SLAs</relationshipLabel>
    <relationshipName>AdviceSLAs</relationshipName>
    <type>Lookup</type>
</CustomField>