force-app/main/default/objects/ServiceLevelAgreement__c/fields/DaysToComplete__c.field-meta.xml
<CustomField>
    <fullName>DaysToComplete__c</fullName>
    <description>The number of days this SLA status should be completed in.</description>
    <label>Days to complete</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>