force-app/main/default/objects/ServiceLevelAgreement__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Human friendly and dynamic description of the SLA that covers both status and activity SLAs.</description>
    <formula>IF(NOT(ISBLANK( Status__c )), Status__c +IF(NOT(ISBLANK( StatusAfter__c )), &quot; ➡️ &quot; +  StatusAfter__c, &quot;&quot;),
CASE( Type__c,
&quot;ADVICE_DATA_ANALYSIS_COMPLETE&quot;, &quot;Information requests | Ready for advice&quot;,
&quot;ADVICE_ALL_INFO_RECEIVED&quot;, &quot;Information requests | Information received&quot;,
&quot;ADVICE_RISK_CALL_BOOK&quot;, &quot;Risk call | Booked&quot;, 
&quot;ADVICE_RISK_CALL_HOLD&quot;, &quot;Risk call | Held&quot;,
&quot;Error: undefined, please raise a ticket&quot;))</formula>
    <label>Description</label>
    <type>Text</type>
</CustomField>