force-app/main/default/objects/ServiceLevelAgreement__c/fields/DueDate__c.field-meta.xml
<CustomField>
    <fullName>DueDate__c</fullName>
    <description>The date by which this status is due to complete.</description>
    <label>Due date</label>
    <type>Date</type>
</CustomField>