force-app/main/default/objects/ServiceLevelAgreement__c/fields/End__c.field-meta.xml
<CustomField>
    <fullName>End__c</fullName>
    <description>The date and time this SLA ended.</description>
    <label>End</label>
    <type>DateTime</type>
</CustomField>