force-app/main/default/objects/ServiceLevelAgreement__c/fields/Start__c.field-meta.xml
<CustomField>
    <fullName>Start__c</fullName>
    <description>The date and time this SLA started.</description>
    <label>Start</label>
    <type>DateTime</type>
</CustomField>