force-app/main/default/objects/ServiceLevelAgreement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status that this SLA is recording.</description>
    <label>Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>