force-app/main/default/objects/ServiceLevelAgreement__c/fields/StatusAfter__c.field-meta.xml
<CustomField>
    <fullName>StatusAfter__c</fullName>
    <description>This is the status of the SLA that is after the current one.</description>
    <label>Status after</label>
    <length>80</length>
    <type>Text</type>
</CustomField>