force-app/main/default/objects/ServiceLevelAgreement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to capture a system usable record of the SLA type.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>